# kagurin-rs

./: .gitignore  Cargo.toml  README.md  _typos.toml  cmdmng.md  commands.md  neofetch.md  run_kagurin.cmd
assets/shells/: pmap.sh  ps.sh  sfinder.sh
kagurin_rs/: Cargo.toml
kagurin_rs/src/: lang.rs  main.rs
kgrs/: Cargo.toml
kgrs/src/: cmd_mng.rs  jsd.rs  lib.rs  playground.rs  response_interactions.rs  tetr.rs  util.rs
kgrs/src/cmds/: jsd.rs  mod.rs  playground.rs  sfinder.rs  tetr.rs
src/: lang.rs  main.rs
