[package]
name = "kagurin_rs"
description = "Faster, reliable and efficient rusted Kagurin bot."
version = "1.7.0-unstable"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/Rinrin0413/kagurin-rs.git"
readme = "README.md"
keywords = ["bot", "discord", "discord-bot", "serenity", "serenity-rs" ]
edition = "2018"

[dependencies]
colored = "2"
tetr_ch = "0.2"
thousands = "0.2.0"
cjp = "0.1"
base64 = "0.13.0"
regex = "1.6.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model", 
    "cache", 
    #"unstable_discord_api"
]

[dependencies.tokio]
version = "1.20"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock"]

[dependencies.kgrs]
path = "./kgrs/"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]
