[workspace]
members = [
    "kagurin_rs",
    "kgrs",
]

[workspace.package]
description = "Faster, reliable and efficient rusted Kagurin bot."
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/Rinrin0413/kagurin-rs.git"
readme = "README.md"
edition = "2021"
