[workspace]
members = [
    "kagurin_rs",
    "kgrs",
]
resolver = "2"

[workspace.package]
description = "Faster, reliable and efficient rusted Kagurin bot."
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Rinrin0413/kagurin-rs.git"
readme = "README.md"
edition = "2021"
