[package]
name = "kagurin_rs"
description.workspace = true
version = "2.2.6-unstable"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/kagurin-rs"
readme.workspace = true
keywords = ["bot", "discord", "discord-bot", "serenity", "serenity-rs" ]
edition.workspace = true

[dependencies]
colored = "2"
tetr_ch = "0.5"
thousands = "0.2.0"
cjp = "1.0.0"
regex = "1.6.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model", 
    "cache", 
    #"cache", 
]

[dependencies.tokio]
version = "1.20"
features = ["macros", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["clock"]

[dependencies.kgrs]
path = "../kgrs/"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.rogger]
version = "*"
features = ["jst"]

[dependencies.cjp_v0]
package = "cjp"
version = "0.1.0"
