[package]
name = "kgrs"
description = "A library for Kagurin.rs"
version = "1.3.1-unstable"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/Rinrin0413/kagurin-rs/kgrs/"
edition = "2021"

[dependencies]
colored = "2"
tetr_ch = "0.1"
#rand = "0.8.5"
#serde_json = "1.0.78"
#thousands = "0.2.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model", 
    #"cache", 
    #"unstable_discord_api"
]


[dependencies.serde]
version = "1.0"
features = ["derive"]

#[dependencies.uuid]
#version = "0.8.2"
#features = ["v4"]

#[dependencies.chrono]
#version = "0.4.19"
#default-features = false
#features = ["clock"]

#[dependencies.reqwest]
#version = "0.11.11"
#features = ["json"]
