[package]
name = "kgrs"
description = "A library for Kagurin.rs"
version = "1.10.4"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/kagurin-rs/tree/master/kgrs"
edition.workspace = true

[dependencies]
colored = "2"
tetr_ch = "0.3"
base64 = "0.13.0"
chrono = "0.4"
#rand = "0.8.5"
#serde_json = "1.0.78"
#thousands = "0.2.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "client", 
    "gateway", 
    "rustls_backend", 
    "model", 
    #"cache", 
    #"unstable_discord_api"
]

[dependencies.serde]
version = "1.0"
features = ["derive"]


[dependencies.reqwest]
version = "0.11.11"
features = ["json", "blocking"]

[dependencies.rogger]
version = "*"
features = ["jst"]

#[dependencies.uuid]
#version = "0.8.2"
#features = ["v4"]
